samples/_failures_safe/1761563103_5ef328_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04c9089e.c: In function ‘main’:
./samples/SAFE/__tmp_04c9089e.c:147:16: error: missing terminating " character
  147 |         printf("No unique words found
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_04c9089e.c:147:9: error: expected expression at end of input
  147 |         printf("No unique words found
      |         ^~~~~~
./samples/SAFE/__tmp_04c9089e.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04c9089e.c:147:9: error: expected declaration or statement at end of input
